[package]
name = "thigpen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "baja"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.17.2"
clap = { version = "4.4.12", features = ["derive", "string"] }
log = "0.4.20"
proc-macro2 = { version = "1.0.75" }
simplelog = { version = "0.12.1", no-default-features = true }
syn = { version = "2.0.47", features = ["full"] }
