[package]
name = "thigpen"
description = "thigpen is a tool for analyzing module layout of a rust crate"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/rockstar/thigpen"
documentation = "https://github.com/rockstar/thigpen"
repository = "https://github.com/rockstar/thigpen"
readme = "README.md"

keywords = []
exclude = [".gitignore", ".github/*"]


[features]
default = ["cargo"]
cargo = []

[[bin]]
name = "thigpen"

[[bin]]
name = "cargo-thigpen"
path = "src/bin/cargo_thigpen.rs"
required-features = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.17.2"
clap = { version = "4.4.12", features = ["derive", "string"] }
log = "0.4.20"
proc-macro2 = { version = "1.0.75" }
simplelog = { version = "0.12.1", default-features = true }
syn = { version = "2.0.47", features = ["full"] }
